# opspilot

./: .gitignore  NOTES.md  README.md  phase0_check.py  phase0_embed_check.py  pyproject.toml
data/knowledge_base/: billing_plans.md  password_reset.md  refund_policy.md  shipping_delivery.md
src/opspilot/: config.py  embeddings.py
src/opspilot/ingestion/: ingest.py
